update how the views are rendered (using shortcut/render instead of http method)

--- a/portfolio-project/services/templates/services/home.html
+++ b/portfolio-project/services/templates/services/home.html
@@ -5,6 +5,6 @@
     <title>This is a test file for Nick</title>
 </head>
 <body>
-Hello WOrld!
+Hello WOrld! This is the services page...
 </body>
 </html>
